--- a/ClientProject/Gui/src/main/resources/fxml/PlanItAddEvent.fxml
+++ b/ClientProject/Gui/src/main/resources/fxml/PlanItAddEvent.fxml
@@ -4,67 +4,62 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="ap" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="590.0" prefWidth="704.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="ap" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="565.0" prefWidth="704.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <Label layoutX="65.0" layoutY="31.0" text="%titleLabel">
+        <Label layoutX="61.0" layoutY="47.0" text="%titleLabel">
             <font>
                 <Font size="16.0" />
             </font>
         </Label>
-        <Label layoutX="64.0" layoutY="122.0" text="%locationLabel">
+        <Label layoutX="60.0" layoutY="138.0" text="%locationLabel">
             <font>
                 <Font size="16.0" />
             </font>
         </Label>
-        <Label layoutX="63.0" layoutY="169.0" text="%dateLabel">
+        <Label layoutX="61.0" layoutY="185.0" text="%startsLabel">
             <font>
                 <Font size="16.0" />
             </font>
         </Label>
-        <Label layoutX="64.0" layoutY="215.0" text="%startsLabel">
+        <Label layoutX="61.0" layoutY="230.0" text="%endsLabel">
             <font>
                 <Font size="16.0" />
             </font>
         </Label>
-        <Label layoutX="64.0" layoutY="260.0" text="%endsLabel">
+        <Label layoutX="61.0" layoutY="279.0" text="%alertLabel">
             <font>
                 <Font size="16.0" />
             </font>
         </Label>
-        <Label layoutX="64.0" layoutY="309.0" text="%alertLabel">
-            <font>
-                <Font size="16.0" />
-            </font>
-        </Label>
-        <Button fx:id="saveButton" layoutX="283.0" layoutY="542.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="95.0" text="%saveButton" AnchorPane.bottomAnchor="17.6" AnchorPane.leftAnchor="273.4" AnchorPane.rightAnchor="350.6" AnchorPane.topAnchor="542.0">
-            <font>
-                <Font size="14.0" />
-            </font>
-        </Button>
-      <Label layoutX="63.0" layoutY="355.0" text="%descriptionLabel">
+      <Label layoutX="60.0" layoutY="325.0" text="%descriptionLabel">
          <font>
             <Font size="16.0" />
          </font>
       </Label>
-      <TextField fx:id="alertField" layoutX="248.0" layoutY="308.0" prefHeight="26.0" prefWidth="119.0" AnchorPane.leftAnchor="248.0" AnchorPane.rightAnchor="336.8" />
-      <TextField fx:id="endsField" layoutX="248.0" layoutY="260.0" prefHeight="26.0" prefWidth="119.0" AnchorPane.leftAnchor="248.0" AnchorPane.rightAnchor="336.8" />
-      <TextField fx:id="startsField" layoutX="248.0" layoutY="215.0" prefHeight="26.0" prefWidth="119.0" AnchorPane.leftAnchor="248.0" AnchorPane.rightAnchor="336.8" />
-      <DatePicker fx:id="dateField" layoutX="219.0" layoutY="169.0" prefHeight="26.0" prefWidth="178.0" />
-      <TextField fx:id="locationField" layoutX="219.0" layoutY="122.0" prefHeight="26.0" prefWidth="443.0" />
-      <Button fx:id="startsDecrement" layoutX="218.0" layoutY="215.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="-" AnchorPane.leftAnchor="218.0" />
-      <Button fx:id="startsIncrement" layoutX="370.0" layoutY="215.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="+" AnchorPane.rightAnchor="306.0" />
-      <Button fx:id="endsDecrement" layoutX="218.0" layoutY="260.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="-" AnchorPane.leftAnchor="218.0" />
-      <Button fx:id="endsIncrement" layoutX="370.0" layoutY="260.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="+" AnchorPane.rightAnchor="306.0" />
-      <Button fx:id="alertsDecrement" layoutX="218.0" layoutY="309.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="-" AnchorPane.leftAnchor="218.0" />
-      <Button fx:id="alertsIncrement" layoutX="370.0" layoutY="308.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="+" />
-      <Label fx:id="dateError" layoutX="218.0" layoutY="195.0" text="%dateErrorLabel" textFill="RED" visible="false" />
-      <Label fx:id="startsError" layoutX="218.0" layoutY="241.0" text="%timeErrorLabel" textFill="RED" visible="false" />
-      <Label fx:id="endsError" layoutX="218.0" layoutY="289.0" text="%timeErrorLabel" textFill="RED" visible="false" />
-      <Label fx:id="alertsError" layoutX="218.0" layoutY="334.0" text="%timeErrorLabel" textFill="RED" visible="false" />
-      <Label fx:id="titleError" layoutX="218.0" layoutY="101.0" text="%titleErrorLabel" textFill="RED" visible="false" />
-      <TextArea fx:id="titleField" layoutX="219.0" layoutY="31.0" prefHeight="70.0" prefWidth="443.0" />
-      <TextArea fx:id="descriptionField" layoutX="219.0" layoutY="355.0" prefHeight="167.0" prefWidth="443.0" />
-      <Button fx:id="deleteButton" layoutX="370.0" layoutY="542.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="95.0" text="%deleteButton" AnchorPane.bottomAnchor="18.0" AnchorPane.rightAnchor="238.8" AnchorPane.topAnchor="542.0">
+      <TextField fx:id="alertField" layoutX="245.0" layoutY="278.0" prefHeight="26.0" prefWidth="119.0" AnchorPane.leftAnchor="245.0" AnchorPane.rightAnchor="339.8" />
+      <TextField fx:id="endsField" layoutX="245.0" layoutY="230.0" prefHeight="26.0" prefWidth="119.0" AnchorPane.leftAnchor="245.0" AnchorPane.rightAnchor="339.8" />
+      <TextField fx:id="startsField" layoutX="245.0" layoutY="185.0" prefHeight="26.0" prefWidth="119.0" AnchorPane.leftAnchor="245.0" AnchorPane.rightAnchor="339.8" />
+      <DatePicker fx:id="startsDateField" layoutX="415.0" layoutY="184.0" prefHeight="26.0" prefWidth="178.0" AnchorPane.rightAnchor="111.0" />
+      <TextField fx:id="locationField" layoutX="215.0" layoutY="138.0" prefHeight="26.0" prefWidth="443.0" />
+      <Button fx:id="startsDecrement" layoutX="215.0" layoutY="185.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="-" AnchorPane.leftAnchor="215.0" />
+      <Button fx:id="startsIncrement" layoutX="365.0" layoutY="185.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="+" AnchorPane.rightAnchor="309.0" />
+      <Button fx:id="endsDecrement" layoutX="215.0" layoutY="230.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="-" AnchorPane.leftAnchor="215.0" />
+      <Button fx:id="endsIncrement" layoutX="365.0" layoutY="230.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="+" AnchorPane.rightAnchor="309.0" />
+      <Button fx:id="alertsDecrement" layoutX="215.0" layoutY="279.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="-" AnchorPane.leftAnchor="215.0" />
+      <Button fx:id="alertsIncrement" layoutX="367.0" layoutY="278.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="+" />
+      <Label fx:id="startsError" layoutX="215.0" layoutY="211.0" text="%timeErrorLabel" textFill="RED" visible="false" />
+      <Label fx:id="endsError" layoutX="215.0" layoutY="259.0" text="%timeErrorLabel" textFill="RED" visible="false" />
+      <Label fx:id="alertsError" layoutX="215.0" layoutY="304.0" text="%timeErrorLabel" textFill="RED" visible="false" />
+      <Label fx:id="titleError" layoutX="214.0" layoutY="117.0" text="%titleErrorLabel" textFill="RED" visible="false" />
+      <TextArea fx:id="titleField" layoutX="215.0" layoutY="47.0" prefHeight="70.0" prefWidth="443.0" />
+      <TextArea fx:id="descriptionField" layoutX="216.0" layoutY="325.0" prefHeight="167.0" prefWidth="443.0" />
+      <DatePicker fx:id="endsDateField" layoutX="415.0" layoutY="230.0" prefHeight="26.0" prefWidth="178.0" AnchorPane.leftAnchor="415.0" AnchorPane.rightAnchor="110.60000000000002" />
+      <DatePicker fx:id="alertDateField" layoutX="415.0" layoutY="278.0" prefHeight="26.0" prefWidth="178.0" AnchorPane.rightAnchor="111.0" />
+      <Button fx:id="saveButton" layoutX="282.0" layoutY="509.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="80.0" text="%saveButton">
+         <font>
+            <Font size="14.0" />
+         </font></Button>
+      <Button fx:id="deleteButton" layoutX="389.0" layoutY="509.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="80.0" text="%deleteButton">
          <font>
             <Font size="14.0" />
          </font></Button>
