--- a/ClientProject/Gui/src/main/resources/fxml/PlanItMainWindow.fxml
+++ b/ClientProject/Gui/src/main/resources/fxml/PlanItMainWindow.fxml
@@ -4,13 +4,13 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="ap" prefHeight="664.0" prefWidth="1213.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="ap" prefHeight="682.0" prefWidth="1213.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ScrollPane layoutX="231.0" layoutY="-2.0" prefHeight="630.0" prefWidth="770.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="214.0" AnchorPane.rightAnchor="214.0" AnchorPane.topAnchor="0.0">
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="630.0" prefWidth="770.0">
                <children>
-                  <GridPane fx:id="calendar" layoutX="-2.0" layoutY="80.0" prefHeight="630.0" prefWidth="785.0" style="-fx-grid-lines-visible: true;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-15.0" AnchorPane.topAnchor="0.0">
+                  <GridPane fx:id="calendar" layoutX="-2.0" layoutY="80.0" prefHeight="682.0" prefWidth="785.0" style="-fx-grid-lines-visible: true;" AnchorPane.bottomAnchor="-52.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-15.0" AnchorPane.topAnchor="0.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -26,6 +26,7 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
                     </rowConstraints>
                      <children>
@@ -123,10 +124,17 @@
                         <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="6" GridPane.rowIndex="5" />
                         <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="5" GridPane.rowIndex="5" />
                         <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="4" GridPane.rowIndex="5" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="3" GridPane.rowIndex="5" />
+                        <VBox prefHeight="130.0" prefWidth="114.0" GridPane.columnIndex="3" GridPane.rowIndex="5" />
                         <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="5" />
                         <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                         <VBox prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="5" />
+                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="6" />
+                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="3" GridPane.rowIndex="6" />
+                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="4" GridPane.rowIndex="6" />
+                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="5" GridPane.rowIndex="6" />
+                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="6" GridPane.rowIndex="6" />
                      </children>
                   </GridPane>
                </children></AnchorPane>
@@ -152,7 +160,7 @@
             <Font size="20.0" />
          </font></Button>
       <ListView fx:id="monthsList" layoutX="1020.0" layoutY="140.0" prefHeight="279.0" prefWidth="174.0" />
-      <Label fx:id="monthLabel" layoutX="1079.0" layoutY="39.0" text="April">
+      <Label fx:id="monthLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="1000.0" layoutY="39.0" prefHeight="35.0" prefWidth="211.0" text="April">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
