--- a/ClientProject/Gui/src/main/resources/fxml/AlertWindow.fxml
+++ b/ClientProject/Gui/src/main/resources/fxml/AlertWindow.fxml
@@ -16,13 +16,13 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Label layoutX="37.0" layoutY="112.0" text="Odložit pripomenutie o:">
+      <Label layoutX="37.0" layoutY="112.0" text="%postponeLabel">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
       <ChoiceBox fx:id="postponeTimeChoice" layoutX="37.0" layoutY="140.0" prefWidth="150.0" />
-      <Button fx:id="postponeButton" layoutX="160.0" layoutY="188.0" mnemonicParsing="false" text="Odložiť">
+      <Button fx:id="postponeButton" layoutX="160.0" layoutY="188.0" mnemonicParsing="false" text="%postponeButton">
          <font>
             <Font size="14.0" />
          </font>
